...
            <!-- Title -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/paymentInfo_lblTitle"
                style="@style/Woo.Card.Title"
                android:layout_width="match_parent"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_lblProductsTotal"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/products_total" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_productsTotal"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="wrap_content"
...
            <!-- Discounts -->
            <LinearLayout
                android:id="@+id/paymentInfo_discountSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_lblDiscount"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/minor_100"
                    android:text="@string/discount" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_discountItems"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="0dp"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_discountTotal"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_lblShipping"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shipping" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_shippingTotal"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_lblTaxes"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taxes" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_taxesTotal"
                    style="@style/Woo.Card.Body.High"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_lblTotal"
                    style="@style/Woo.Card.Body.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_total" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_total"
                    style="@style/Woo.Card.Body.Bold"
                    android:layout_width="wrap_content"
...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentInfo_paid"
                        style="@style/Woo.Card.Body.Bold"
                        android:layout_width="wrap_content"
...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paymentInfo_paymentMsg"
                    style="@style/Woo.Card.Body"
                    android:layout_width="wrap_content"
...
            <!-- Refund and New Total Section -->
            <LinearLayout
                android:id="@+id/paymentInfo_refundSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/paymentInfo_refundTotal"
                            style="@style/Woo.Card.Body.Bold"
                            android:layout_width="wrap_content"
...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentInfo_newTotal"
                        style="@style/Woo.Card.Body.Bold"
                        android:layout_width="wrap_content"
...
