...
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textPayment"
                style="@style/Woo.Card.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/major_100"
                android:text="@string/payment" />

            <!-- Subtotal -->
            <LinearLayout
                android:id="@+id/containerSubtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    style="@style/Woo.Card.Body.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="$44.00" />
            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/major_100"
...
