...
        android:includeFontPadding="false"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        tools:text="$22.00"
        tools:visibility="visible"/>

    <View
        android:id="@+id/divider"
        style="@style/Woo.Divider"
        android:layout_width="0dp"
...
